# LinearAlgebraUtils

./: CMakeLists.txt  README.md
include/: ivector2.hpp  ivector3.hpp  ivector4.hpp  lauconfig.h  lauconfig.h.in  matrix2.hpp  matrix3.hpp  matrix4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/: ivector2.cpp  ivector3.cpp  ivector4.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
